remove font Abaya and Actor

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -96,7 +96,7 @@ body {
 /* END NAVBAR */
 
 .header-home {
-    font-family: $fontAbhaya;
+    font-family: $fontLogo;
     color: $color-white;
     padding: 1rem 0;
     display: flex;
@@ -130,7 +130,7 @@ body {
 .space-pitch {
     padding: 1rem 0 2rem;
     font-size: 1.3rem;
-    font-family: $fontAbhaya;
+    font-family: $fontLogo;
     text-align: center;
     color: $color-burgundy;
 }
@@ -138,7 +138,7 @@ body {
 .premium-title {
     margin-top: 3rem;
     font-size: 1.3rem;
-    font-family: $fontAbhaya;
+    font-family: $fontLogo;
     text-align: center;
     color: $color-burgundy;
 }
@@ -361,7 +361,7 @@ input[type=submit],
     margin: 0;
     padding-top: 1.5rem;
     text-align: center;
-    font-family: $fontBodiniLight;
+    font-family: $fontLogo;
     font-size: 3rem;
     color: $color-white;
     line-height: 1.5rem;
@@ -384,7 +384,7 @@ input[type=submit],
     margin-top: 7rem;
     display: flex;
     justify-content: center;
-    font-family: $fontBodiniLight;
+    font-family: $fontLogo;
     color: $color-white;
 }
 
@@ -395,7 +395,7 @@ input[type=submit],
     border-radius: 1rem;
     height: auto;
     background-color: $color-white;
-    font-family: $fontBodiniLight;
+    font-family: $fontLogo;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -435,7 +435,7 @@ input[type=submit],
     margin: 0;
     padding-top: 1.5rem;
     text-align: center;
-    font-family: $fontBodiniLight;
+    font-family: $fontLogo;
     font-size: 3rem;
     color: $color-white;
     line-height: 1.5rem;
@@ -446,7 +446,7 @@ input[type=submit],
     margin-top: 1rem;
     display: flex;
     justify-content: center;
-    font-family: $fontBodiniLight;
+    font-family: $fontLogo;
     color: $color-white;
 }
 
@@ -457,7 +457,7 @@ input[type=submit],
     border-radius: 1rem;
     height: auto;
     background-color: $color-white;
-    font-family: $fontBodiniLight;
+    font-family: $fontLogo;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -493,7 +493,7 @@ input[type=submit],
 }
 
 .search-header-h2 {
-    font-family: $fontBodiniLight;
+    font-family: $fontLogo;
 }
 
 .search-header-market {
@@ -523,7 +523,7 @@ input[type=submit],
     margin: 0;
     padding-top: 1.5rem;
     text-align: center;
-    font-family: $fontBodiniLight;
+    font-family: $fontLogo;
     font-size: 3rem;
     color: $color-white;
     line-height: 1.5rem;
@@ -546,7 +546,7 @@ input[type=submit],
     margin-top: 7rem;
     display: flex;
     justify-content: center;
-    font-family: $fontBodiniLight;
+    font-family: $fontLogo;
     color: $color-white;
 }
 
@@ -557,7 +557,7 @@ input[type=submit],
     border-radius: 1rem;
     height: auto;
     background-color: $color-white;
-    font-family: $fontBodiniLight;
+    font-family: $fontLogo;
     display: flex;
     flex-direction: column;
     justify-content: center;
