header search and make component for title logo

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -96,7 +96,6 @@ body {
 /* END NAVBAR */
 
 .header-home {
-    font-family: $fontLogo;
     color: $color-white;
     padding: 1rem 0;
     display: flex;
@@ -107,13 +106,22 @@ body {
     background-image: url("/assets/images/header.png");
     background-size: cover;
     background-repeat: no-repeat;
-    font-size: 1.5rem;
     text-shadow: 1px 1px 1px #534f4c;
 }
 
 .logo-title {
+    font-family: $fontLogo;
     color: $color-white;
-    margin: 0;
+    h1 {
+       
+        margin: 0;
+    }
+    h2{
+        font-size: 1em;
+        margin: 0;  
+        letter-spacing: 0.7rem;
+    }
+
 }
 
 
@@ -310,6 +318,7 @@ input[type=submit],
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
+    box-shadow: 0px 1px 3px #535353;
     cursor: pointer;
     text-decoration: none;
 }
@@ -480,30 +489,26 @@ input[type=submit],
 
 /* END NEW SPACE */
 
-/* START SPACE_INDEX */
+/* START SPACE_SEARCH */
 
-.search {
+.search{
+    text-align: center;
     background-color: $color-cerise;
-}
-
-.search-header {
-    padding-top: 2rem;
+    padding: 2rem 0;
     color: $color-white;
     letter-spacing: 2px;
+    p{
+        font-family: $fontWorkSans;
+    }
+    
 }
 
-.search-header-h2 {
-    font-family: $fontLogo;
+.btn-filter{
+    margin-top: 1rem;
 }
 
-.search-header-market {
-    margin: 0;
-    font-size: xx-large;
-    font-weight: lighter;
-    letter-spacing: 2px;
-}
 
-.search-criteria {
+.show-search {
     background-color: $color-white;
     border: $color-grey;
     border-radius: 20px;
