--- a/templates/space/index.html.twig
+++ b/templates/space/index.html.twig
@@ -1,13 +1,6 @@
 {% extends 'base.html.twig' %}
-{% block title %}Trouvez votre espace de travail
+{% block title %}#
 {% endblock %}
 {% block body %}
-	<div class="search">
-		<div class="search-header">
-			<p class="search-header-market">Marché</p>
-			<p class="search-header-concluded">CONCLU</p>
-			<h2 class="search-header-h2">Que recherchez - vous ?</h2>
-		</div>
-		<div class='search-criteria'></div>
-	</div>
+
 {% endblock %}
