--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -3,11 +3,15 @@
 {% block title %}Edit User{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
+    <div class="user_edit-h1">
+        <h1>Mon profil</h1>
+    </div>
+    <div class="user_edit-div-form">
+        {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+    </div>
+    <div class="user_edit-return">
+        <a class="user_index-submit" href="{{ path('user_index') }}">Retour à mes informations</a>
+    </div>
+    {# {{ include('user/_delete_form.html.twig') }} #}
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('user_index') }}">back to list</a>
-
-    {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
