--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -2,14 +2,14 @@
 
 {% block body %}
     <div class="user_index-h1">
-        <h1>Mon profil</h1>
+        <h1>Mes informations</h1>
     </div>
     {% if app.user %}
         <div class="user_index-container">
             {% if app.user.avatar %}
-                <img class="user_index-avatar" src="{{ asset('build/images/visage.jpg') }}">
-            {% else %}
                 <img class="user_index-avatar" src="{{ asset('build/images/' ~ app.user.avatar) }}">
+            {% else %}
+                <img class="user_index-avatar" src="{{ asset('build/images/logoMarcheConclu.png') }}">
             {% endif %}
             <h2>
                 {{ app.user.firstname ~ " " ~ app.user.lastname }}
@@ -24,33 +24,36 @@
                     </p>
                 {% endif %}
             </div>
-            <a class="form-submit" href="{{ path('app_register', {'id': app.user.id}) }}">Modifier mon profil</a>
+            <a class="user_index-submit" href="{{ path('user_edit', {'id': app.user.id}) }}">Modifier mon profil</a>
+            <a class="user_index-submit" href="{{ path('app_logout') }}">Deconnexion</a>
         </div>
         <div class="user_index-location">
             <h3>Mes locations :</h3>
-            <ul class="ulTEST user_index-location-ul">
+            {# ul pour affichage de location a supprimer ensuite #}
+            <ul class="user_index-location-ul">
                 <li class="user_index-location-li">
                     <p>{{ "Bureau rue de st-brice" }}</p>
                     <div>
-                        <a class="form-submit" href="{{ path("space_show", {id: 1}) }}">Voir l'annonce</a>
-                        <a class="form-submit" href="{{ path("space_edit", {id: 1}) }}">Modifier l'annonce</a>
+                        <a class="user_index-submit" href="{{ path("space_show", {id: 1}) }}">Voir l'annonce</a>
+                        <a class="user_index-submit" href="{{ path("space_edit", {id: 1}) }}">Modifier l'annonce</a>
                     </div>
                 </li>
                 <li class="user_index-location-li">
                     <p>{{ "Bureau du coin de la rue" }}</p>
                     <div>
-                        <a class="form-submit" href="{{ path("space_show", {id: 1}) }}">Voir l'annonce</a>
-                        <a class="form-submit" href="{{ path("space_edit", {id: 1}) }}">Modifier l'annonce</a>
+                        <a class="user_index-submit" href="{{ path("space_show", {id: 1}) }}">Voir l'annonce</a>
+                        <a class="user_index-submit" href="{{ path("space_edit", {id: 1}) }}">Modifier l'annonce</a>
                     </div>
                 </li>
                 <li class="user_index-location-li">
                     <p>{{ "Salle de conférence" }}</p>
                     <div>
-                        <a class="form-submit" href="{{ path("space_show", {id: 1}) }}">Voir l'annonce</a>
-                        <a class="form-submit" href="{{ path("space_edit", {id: 1}) }}">Modifier l'annonce</a>
+                        <a class="user_index-submit" href="{{ path("space_show", {id: 1}) }}">Voir l'annonce</a>
+                        <a class="user_index-submit" href="{{ path("space_edit", {id: 1}) }}">Modifier l'annonce</a>
                     </div>
                 </li>
             </ul>
+            {# fin ul pour affichage de location a supprimer ensuite #}
             {%if app.user.spaces is not empty %}
                 <h3>Mes locations :</h3>
             {% endif %}
@@ -59,8 +62,8 @@
                 <li class="user_index-location-li">
                     <p>{{ "Nom de l'annonce :" ~ " " ~ space.name }}</p>
                     <div>
-                        <a class="form-submit" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
-                        <a class="form-submit" href="{{ path("space_edit", {id: space.id}) }}">Modifier l'annonce</a>
+                        <a class="user_index-submit" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
+                        <a class="user_index-submit" href="{{ path("space_edit", {id: space.id}) }}">Modifier l'annonce</a>
                     </div>
                 </li>
             {% endfor %}
