i add a content to show the flex office concept

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -65,4 +65,12 @@
 			</figure>
 		{% endfor %}
 	</div>
+	<div class="flex-office" >
+		<h3 class="flex-subtitle">Découvrez</h3>
+		<h2 class="flex-title">Le flex office</h2>
+		<img src="{{ asset('build/images/flexoffice.png') }}" alt="flexoffice"/>
+		<h3 class="p-title">Trouvez votre bureau partout</h3>
+		<p>Une solution pour tous vos besoins qui s’adapte en fonction de l’évolution de votre business</p>
+	</div>
+
 {% endblock %}
