i start the css of flex office

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -258,6 +258,11 @@ body {
     font-weight: bold;
 }
 
+.flex-office {
+    background-color: #E0C2C2;
+    text-align: center;
+}
+
 /* END SPACE_INDEX */
 
 /* END HOME_INDEX */
