change search bar as figma

--- a/templates/_searchbar.html.twig
+++ b/templates/_searchbar.html.twig
@@ -1,6 +1,7 @@
 <form action="{{ path('space_search') }}" method="get" class="form-search">
-<input type="text" placeholder="Ou souhaitez-vous travailler ?" name="location" value="{{ location ?? '' }}">
-<button class="btn form-submit">
-    Chercher
-</button>
-</form>
+	<input class="search-bar" type="text" placeholder="Ou souhaitez-vous travailler ?" name="location" value="{{ location ?? '' }}">
+	<button class="btn form-submit">
+		Chercher
+	</button>
+
+</div>
