--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -97,7 +97,7 @@ body {
 
 .header-home {
     color: $color-white;
-    padding: 1rem 0;
+    padding: 3rem 3rem 2rem 3rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -121,18 +121,23 @@ body {
         margin: 0;  
         letter-spacing: 0.7rem;
     }
+   
 
 }
-
-
+   
 .form-search {
-    padding-left: 5rem;
-    padding-right: 5rem;
+    margin: 2rem 0 1rem 0;
+    display: flex;
+    flex-direction: row;
     text-align: center;
     border-radius: 4px;
     /* Rounded borders */
     box-sizing: border-box;
     /* Make sure that padding and width stays in place */
+    .search-bar{
+        margin: 0;
+        border-radius: 20px 0 0 20px;
+    }
 }
 
 .space-pitch {
@@ -315,9 +320,10 @@ input[type=submit],
 .form-submit {
     background-color: $color-burgundy;
     color: white;
-    padding: 12px 20px;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
+    border-radius: 0 20px 20px 0;
+    padding: 10px;
     box-shadow: 0px 1px 3px #535353;
     cursor: pointer;
     text-decoration: none;
@@ -494,7 +500,7 @@ input[type=submit],
 .search{
     text-align: center;
     background-color: $color-cerise;
-    padding: 2rem 0;
+    padding: 4rem 3rem 2rem 3rem;
     color: $color-white;
     letter-spacing: 2px;
     p{
