fix twig and scss carousel

--- a/assets/styles/carousel.scss
+++ b/assets/styles/carousel.scss
@@ -64,7 +64,7 @@
 
 .texte-center {
     text-decoration: none;
-    font-family: 'Actor';
+    font-family: $fontWorkSans;
     font-size: 1.75rem;
     display: flex;
     justify-content: center;
