--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="user_edit-h1">
-        <h1>Editer mon profil</h1>
+        <h1>Créér un compte</h1>
     </div>
     <div class="user_edit-div-form">
     {{ form_start(registrationForm) }}
