--- a/templates/space/search.html.twig
+++ b/templates/space/search.html.twig
@@ -5,8 +5,16 @@
 	<div class="search">
 		{% include "_logoTitle.html.twig" %}
 		<p>Que recherchez - vous ?</p>
-		{% include '_searchbar.html.twig' %}
-		<button class="btn-filter">Filtres</button>
+		<div class="search-container">
+			{% include '_searchbar.html.twig' %}
+			<input class="filter-input" id="filter-input" type="checkbox" hidden>
+			<label class="filter-svg" for="filter-input" width="50px" height="50px">
+				{% include 'space/_filter_button.html.twig' %}
+			</label>
+			<div class="filter-container">
+				{% include 'space/_filter_search.html.twig' %}
+			</div>
+		</div>
 	</div>
 
 
@@ -36,7 +44,8 @@
 							<span id="spanpriceday">
 								/ jour</span>
 						</div>
-						<a class="form-submit" id="buttonCardShow" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
+						<a class="form-submit" id="buttonCardShow" href="{{ path("space_show", {id: space.id}) }}">Voir
+																																																					l'annonce</a>
 					</div>
 				</figcaption>
 			</figure>
