--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -61,9 +61,11 @@
 	{% endfor %}
 </div>
 <div class="flex-office">
-	<h3 class="flex-subtitle">Découvrez</h3>
-	<h2 class="flex-title">Le flex office</h2>
+	<div class="flex-titles">
+		<h4 class="flex-subtitle">Découvrez</h3>
+		<h2 class="flex-title">Le flex office</h2>
+	</div>
 	<img src="{{ asset('build/images/flexoffice.png') }}" alt="flexoffice"/>
-	<h3 class="p-title">Trouvez votre bureau partout</h3>
-	<p>Une solution pour tous vos besoins qui s’adapte en fonction de l’évolution de votre business</p>
+	<h4 class="p-title">Trouvez votre bureau partout</h3>
+	<p class="p-flex">Une solution pour tous vos besoins qui s’adapte en fonction de l’évolution de votre business</p>
 </div>{% endblock %}
