I start the testimony and the partner sectiion

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -68,4 +68,36 @@
 	<img src="{{ asset('build/images/flexoffice.png') }}" alt="flexoffice"/>
 	<h4 class="p-title">Trouvez votre bureau partout</h3>
 	<p class="p-flex">Une solution pour tous vos besoins qui s’adapte en fonction de l’évolution de votre business</p>
+</div>
+
+<div class="testimony">
+		<h4 class="testimony-title">Ils en parlent</h1>
+		<div class="testimony-text">
+			<div class="marks-image"><img src="{{ asset('build/images/mark1.png') }}" alt="marks"/></div>
+				<p>Marché Conclu a résolu mon probleme d'espace pour reloger des clients et faire face en toute sérénité aux retards sur mes chantiers.</p>
+			<div class="marks-image"><img src="{{ asset('build/images/mark2.png')}}" alt="marks"/></div>
+		</div>
+		<div class="testimony-autor">
+			<div class="autor-image-crop"><img src="{{ asset('build/images/Florence.png') }}" alt="testimomy"/></div>
+			<h3 class="autor-name">Florence Chombinho</h3>
+			<p class="autor-info">49 ans, Présidente chez CITANIUM - REIMS</p>
+		</div>
+
+</div>
+
+<div class="partner">
+		<h4 class="partner-title">Nos partenaires</h1>
+		<div class="partner-logos">
+			<img src="{{ asset('build/images/Allianz.png') }}" alt="Alliance-logo"/>
+			<img src="{{ asset('build/images/cic.png') }}" alt="cic-logo"/>
+			<img src="{{ asset('build/images/axa.png') }}" alt="axa-logo"/>
+			
+		</div>
+		<div class="partner-text">
+			<p class="partner-info">Pour vous assurer une expériance toujours plus simple et sécurisé, nous avons travaillé avec nos partnaires a devolopper des outils pour vous accompagner avec toujours plus de flexibilité dans votre location ou gestion de vos espaces de travail.</p>
+		</div>
+
+</div>
+
+
 </div>{% endblock %}
