--- a/templates/_searchbar.html.twig
+++ b/templates/_searchbar.html.twig
@@ -3,6 +3,6 @@
 		<input class="search-bar" type="text" id="autoComplete" placeholder="Ou souhaitez-vous travailler ?" name="location" value="{{ location ?? '' }}">
 	</div>
 	<button class="btn form-submit">
-		Chercher
+		Rechercher
 	</button>
 </form>
