--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -112,14 +112,20 @@ body {
     color: $color-white;
 
     h1 {
-       
+        font-size: 2rem;
+        font-weight: 500;
         margin: 0;
+        letter-spacing: .1rem;
+        margin-right: .1rem;
+
     }
 
     h2{
-        font-size: 1em;
-        margin: 0;  
-        letter-spacing: 0.7rem;
+        font-size: .7em;
+        margin: 0; 
+        font-weight: 400; 
+        letter-spacing: .7rem;
+        margin-right: -.7rem;
     }
 }
   
@@ -143,7 +149,9 @@ body {
 .space-pitch {
     padding: 1rem 0 2rem;
     font-size: 1.3rem;
-    font-family: $fontLogo;
+    font-weight: 300;
+    letter-spacing: .1rem;
+    font-family: $fontWorkSans;
     text-align: center;
     color: $color-burgundy;
 }
