--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -159,7 +159,8 @@ body {
 .premium-title {
     margin-top: 3rem;
     font-size: 1.3rem;
-    font-family: $fontLogo;
+    font-family: $fontWorkSans;
+    font-weight: 400;
     text-align: center;
     color: $color-burgundy;
 }
