--- a/templates/space/search.html.twig
+++ b/templates/space/search.html.twig
@@ -5,18 +5,14 @@
 	<div class="search">
 		{% include "_logoTitle.html.twig" %}
 		<p>Que recherchez - vous ?</p>
-		<div class="search-container">
+		<div
+			class="search-container">
+			{# search bar with filters #}
 			{% include '_searchbar.html.twig' %}
-			<input class="filter-input" id="filter-input" type="checkbox" hidden>
-			<label class="filter-svg" for="filter-input" width="50px" height="50px">
-				{% include 'space/_filter_button.html.twig' %}
-			</label>
-			<div class="filter-container">
-				{% include 'space/_filter_search.html.twig' %}
-			</div>
+
+			{% include 'space/_filters.html.twig' %}
 		</div>
 	</div>
-
 
 	{% if spaces %}
 		<p>{{ spaces|length }}
@@ -45,7 +41,7 @@
 								/ jour</span>
 						</div>
 						<a class="form-submit" id="buttonCardShow" href="{{ path("space_show", {id: space.id}) }}">Voir
-																																																					l'annonce</a>
+																																																																																																																																																																																																																																																																																																																																																			l'annonce</a>
 					</div>
 				</figcaption>
 			</figure>
