--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,20 +1,15 @@
-<div>
-    {% if not form.vars.valid %}
-        <div class="alert alert-error">
-            {{ form_errors(form) }}
-        </div>
-    {% endif %}
-</div>
 <div class="user_edit-div-form">
-    {{ form_start(form) }}
-    {{ form_row(form.email) }}
-    {{ form_row(form.plainPassword) }}
-    {{ form_row(form.firstname) }}
-    {{ form_row(form.lastname) }}
-    {{ form_row(form.avatar) }}
-    {{ form_row(form.company) }}
-
-    <button type="submit" class="btn">Enregistrer</button>
-{{ form_end(form) }}
+    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+        {% if not form.vars.valid %}
+            {{ form_errors(form) }}
+        {% endif %}
+        {{ form_row(form.lastname) }}
+        {{ form_row(form.firstname) }}
+        {{ form_row(form.email) }}
+        {{ form_row(form.plainPassword) }}
+        {{ form_row(form.avatar) }}
+        {{ form_row(form.company) }}
+        {{ form_row(form.enregistrer) }}
+    {{ form_end(form) }}
 </div>
 
