Add security for the API KEY

--- a/templates/_searchbar.html.twig
+++ b/templates/_searchbar.html.twig
@@ -4,6 +4,7 @@
         Chercher
     </button>
 </form>
+			<script type="text/javascript" src="{{ api }}"></script>
     <script src="{{ asset("build/autocomplete.js") }}">
     </script>
 
