--- a/templates/space/_filter_button.html.twig
+++ b/templates/space/_filter_button.html.twig
@@ -1,7 +1,7 @@
 <?xml
 version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 25.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 267 248" xml:space="preserve">
+<svg class="filter-button" version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 267 248" xml:space="preserve">
 	<path d="M138.6,29.4C151.4,32,161,43.3,161,56.8c0,13.5-9.6,24.8-22.4,27.4V236c0,3.1-2.5,5.6-5.6,5.6s-5.6-2.5-5.6-5.6V84.2
 							C114.6,81.6,105,70.3,105,56.8c0-13.5,9.6-24.8,22.4-27.4V12c0-3.1,2.5-5.6,5.6-5.6s5.6,2.5,5.6,5.6V29.4z M116.2,56.8
 							c0,9.3,7.5,16.8,16.8,16.8c9.3,0,16.8-7.5,16.8-16.8c0-9.3-7.5-16.8-16.8-16.8C123.7,40,116.2,47.5,116.2,56.8z"/>
