--- a/templates/space/search.html.twig
+++ b/templates/space/search.html.twig
@@ -5,12 +5,11 @@
 	<div class="search">
 		{% include "_logoTitle.html.twig" %}
 		<p>Que recherchez - vous ?</p>
-		<div
-			class="search-container">
-			{# search bar with filters #}
-			{% include '_searchbar.html.twig' %}
-
-			{% include 'space/_filters.html.twig' %}
+		<div class="searchbar-and-filter">
+			<div class="search-container">
+				{% include '_searchbar.html.twig' %}
+			</div>
+				{% include 'space/_filters.html.twig' %}
 		</div>
 	</div>
 
