corrected comments multine and lowercase with hyphens

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,13 +1,13 @@
-<nav class="navbar_navigation navbar_navigation--inline">
+<nav class="navbar-navigation navbar-navigation--inline">
 	<ul>
-		<li><a class="navbar_a"href="{{ path("home") }}"><svg class="navbar_icon navbar_icon--2x navbar_svg"><use xlink:href="#icon-home"/></svg><div class="navbar_invisible"><span class="navbar_invisible">Accueil</span></div></a></li>
-		<li><a class="navbar_a"href="{{ path("space_search") }}"><svg class="navbar_icon navbar_icon--2x navbar_svg"><use xlink:href="#icon-search"/></svg><div class="navbar_invisible"><span class="navbar_invisible">Louer</span></div></a></li>
-		<li><a class="navbar_a"href="{{ path("space_new") }}"><svg class="navbar_icon navbar_icon--2x navbar_svg"><use xlink:href="#icon-cart"/></svg><div class="navbar_invisible"><span class="navbar_invisible">Publier</span></div></a></li>
-		<li><a class="navbar_a"href="{{ path("user_index") }}"><svg class="navbar_icon navbar_icon--2x navbar_svg"><use xlink:href="#icon-user"/></svg><div class="navbar_invisible"><span class="navbar_invisible">Profil</span></div></a></li>
+		<li><a class="navbar-a"href="{{ path("home") }}"><svg class="navbar-icon navbar-icon--2x navbar-svg"><use xlink:href="#icon-home"/></svg><div class="navbar-invisible"><span class="navbar-invisible">Accueil</span></div></a></li>
+		<li><a class="navbar-a"href="{{ path("space_search") }}"><svg class="navbar-icon navbar-icon--2x navbar-svg"><use xlink:href="#icon-search"/></svg><div class="navbar-invisible"><span class="navbar-invisible">Louer</span></div></a></li>
+		<li><a class="navbar-a"href="{{ path("space_new") }}"><svg class="navbar-icon navbar-icon--2x navbar-svg"><use xlink:href="#icon-cart"/></svg><div class="navbar-invisible"><span class="navbar-invisible">Publier</span></div></a></li>
+		<li><a class="navbar-a"href="{{ path("user_index") }}"><svg class="navbar-icon navbar-icon--2x navbar-svg"><use xlink:href="#icon-user"/></svg><div class="navbar-invisible"><span class="navbar-invisible">Profil</span></div></a></li>
 	</ul>
 
 </nav>
-<svg xmlns="http://www.w3.org/2000/svg" class="navbar_icons navbar_svg">
+<svg xmlns="http://www.w3.org/2000/svg" class="navbar-icons navbar-svg">
 	<symbol id="icon-cart" viewbox="0 0 92 92">
 		<path d="M 47 2 C 23.247 3.6 3 14 2 45 C 4 76 21 88 47 88 C 74 87 91 74 92 45 C 90 15 71.253 3.6 47 2 z M 47.25 7.2 C 69.174 7.2 86.94 24.12 86.94 45 C 86.94 65.88 69.174 82.8 47.25 82.8 C 25.326 82.8 7.56 65.88 8 45 C 7.56 24.12 25.326 7.2 47.25 7.2 z M 45.36 23.4 L 45.36 43.2 L 24.57 43.2 L 24.57 46.8 L 45.36 46.8 L 45.36 66.6 L 49.14 66.6 L 49.14 46.8 L 69.93 46.8 L 69.93 43.2 L 49.14 43.2 L 49.14 23.4 L 45.36 23.4 z"/>
 	</symbol>
