--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -3,14 +3,14 @@
 {% block title %}Edit User{% endblock %}
 
 {% block body %}
-    <div class="user_edit-h1">
+    <div class="user-edit-h1">
         <h1>Mon profil</h1>
     </div>
-    <div class="user_edit-div-form">
+    <div class="user-edit-div-form">
         {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
     </div>
     <div class="user_edit-return">
-        <a class="user_index-submit" href="{{ path('user_index') }}">Retour à mes informations</a>
+        <a class="user-index-submit" href="{{ path('user_index') }}">Retour à mes informations</a>
     </div>
     {# {{ include('user/_delete_form.html.twig') }} #}
 
