--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -9,9 +9,9 @@ body {
     padding-bottom: 5rem;
 }
 
-/* START NAVBAR */
+// START NAVBAR
 
-.navbar_invisible {
+.navbar-invisible {
     bottom: 5px;
     position: absolute;
     display: flex;
@@ -19,21 +19,16 @@ body {
     padding-left: 0.7rem;
 }
 
-.navbar_align {
-    display: grid;
-    place-items: center;
-}
-
-.navbar_a {
+.navbar-a {
     color: inherit;
     outline: 0;
 }
 
-.navbar_icons {
+.navbar-icons {
     display: none;
 }
 
-.navbar_icon {
+.navbar-icon {
     block-size: 1em;
     display: inline-block;
     fill: currentcolor;
@@ -41,15 +36,15 @@ body {
     vertical-align: middle;
 }
 
-.navbar_icon--2x {
+.navbar-icon--2x {
     font-size: 2rem;
 }
 
-.navbar_svg {
+.navbar-svg {
     max-inline-size: 100%;
 }
 
-.navbar_navigation {
+.navbar-navigation {
     background-color: #f0f6ff;
     box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
     width: 100%;
@@ -58,13 +53,13 @@ body {
     overflow-y: scroll;
 }
 
-.navbar_navigation ul {
+.navbar-navigation ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-.navbar_navigation a {
+.navbar-navigation a {
     display: block;
     padding: 1em 2em 2em;
     position: relative;
@@ -72,12 +67,12 @@ body {
 }
 
 
-.navbar_navigation a:focus::after,
-.navbar_navigation a:hover::after {
+.navbar-navigation a:focus::after,
+.navbar-navigation a:hover::after {
     opacity: 1;
 }
 
-.navbar_navigation a::after {
+.navbar-navigation a::after {
     block-size: 100%;
     box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
     inline-size: 100%;
@@ -85,14 +80,14 @@ body {
     transition: opacity 0.3s;
 }
 
-.navbar_navigation--inline ul {
+.navbar-navigation--inline ul {
     margin: 0;
     display: flex;
     justify-content: space-around;
     width: 100%;
 }
 
-/* END NAVBAR */
+// END NAVBAR
 
 .header-home {
     color: $color-white;
@@ -137,9 +132,9 @@ body {
     flex-direction: row;
     text-align: center;
     border-radius: 4px;
-    /* Rounded borders */
+    // Rounded borders
     box-sizing: border-box;
-    /* Make sure that padding and width stays in place */
+    // Make sure that padding and width stays in place
 
     .search-bar{
         margin: 0;
@@ -166,7 +161,7 @@ body {
     color: $color-burgundy;
 }
 
-/* START HOME_INDEX */
+// START HOME_INDEX
 
 .offer {
     display: flex;
@@ -282,7 +277,7 @@ body {
     margin-top: 1rem;
     font-weight: bold;
 }
-/* START FLEX OFFICE */
+// START FLEX OFFICE
 
 .flex-office {
     background-color: #E0C2C2;
@@ -321,9 +316,9 @@ p.p-flex {
 
 }
 
-/* END FLEX OFFICE */
+// END FLEX OFFICE
 
-/* START TESTIMONY */
+// START TESTIMONY
 .testimony {
     text-align: center;
 }
@@ -381,9 +376,9 @@ p.p-flex {
     margin: 0;
 }
 
-/* END TESTIMONY */
+// END TESTIMONY
 
-/* START PARTNER */
+// START PARTNER
 
 .partner {
     text-align: center;
@@ -411,17 +406,17 @@ p.p-flex {
     margin: 0 2rem;
     padding: 1rem 0;
 }
-/* END PARTNER */
+// END PARTNER
 
 
-/* END SPACE_INDEX */
+// END SPACE_INDEX
 
-/* END HOME_INDEX */
+// END HOME_INDEX
 
-/* END OF CARD */
+// END OF CARD
 
 
-/* Add Space Form */
+// Add Space Form
 
 #space {
     display: flex;
@@ -440,21 +435,21 @@ ul {
     padding: 0;
 }
 
-/* Style inputs with type="text", select elements and textareas */
+// Style inputs with type="text", select elements and textareas
 
 input[type=text], input[type=password],input[type=number], select, textarea, .form-content {
     background-color: rgba(224, 224, 224, 0.87);
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */ 
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+    width: 100%; // Full width
+    padding: 12px; // Some padding 
+    border: 1px solid #ccc; // Gray border
+    border-radius: 4px; // Rounded borders
+    box-sizing: border-box; // Make sure that padding and width stays in place
+    margin-top: 6px; // Add a top margin
+    margin-bottom: 16px; // Bottom margin
+    resize: vertical // Allow the user to vertically resize the textarea (not horizontally)
 }
 
-/* Style the submit button with a specific background color etc */
+// Style the submit button with a specific background color etc
 
 input[type=submit],
 .form-submit {
@@ -470,7 +465,7 @@ input[type=submit],
 }
 
 
-/* Add a background color and some padding around the form */
+// Add a background color and some padding around the form
 
 .container {
     border-radius: 5px;
@@ -506,7 +501,7 @@ input[type=submit],
     text-decoration: none;
 }
 
-/* LOGIN/REGISTER PAGE */
+// LOGIN/REGISTER PAGE
 .login-body {
     background-color: $color-cerise;
     height: 92vh;
@@ -579,7 +574,7 @@ input[type=submit],
     color: black;
 }
 
-/* ADD NEW SPACE */
+// ADD NEW SPACE
 
 .new-space-body {
     background-color: $color-cerise;
@@ -633,9 +628,9 @@ input[type=submit],
 }
 
 
-/* END NEW SPACE */
+// END NEW SPACE
 
-/* START SPACE_SEARCH */
+// START SPACE_SEARCH
 .search{
     text-align: center;
     background-color: $color-cerise;
@@ -678,13 +673,13 @@ input[type=submit],
 
 input[type=checkbox], input[type=range]{
     background-color: rgba(224, 224, 224, 0.87);
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */ 
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
+    width: 100%; // Full width
+    padding: 12px; // Some padding 
+    border: 1px solid #ccc; // Gray border
+    border-radius: 4px; // Rounded borders
+    box-sizing: border-box; // Make sure that padding and width stays in place
+    margin-top: 6px; // Add a top margin
+    margin-bottom: 16px; // Bottom margin
 }
 
 .filter-button {
@@ -697,7 +692,7 @@ input[type=checkbox], input[type=range]{
 }
 
 
-/* LOGIN/REGISTER PAGE */
+// LOGIN/REGISTER PAGE
 .login-body {
     background-color: $color-cerise;
 }
@@ -769,7 +764,7 @@ input[type=checkbox], input[type=range]{
     color: black;
 }
 
-/* START USER INDEX */
+// START USER INDEX
 
 .user_index-h1 {
     text-align: center;
@@ -779,7 +774,7 @@ input[type=checkbox], input[type=range]{
     color: $color-white;
 }
 
-.user_index-container {
+.user-index-container {
     height: 50vh;
     display: flex;
     flex-direction: column;
@@ -787,7 +782,7 @@ input[type=checkbox], input[type=range]{
     justify-content: space-around;
 }
 
-.user_index-avatar {
+.user-index-avatar {
     margin-top: 1rem;
     border: 1px solid $color-cerise;
     box-shadow: 10px 10px 5px rgb(196, 154, 154);
@@ -796,28 +791,28 @@ input[type=checkbox], input[type=range]{
     align-self: center;
 }
 
-.user_index-location-li {
+.user-index-location-li {
     display: flex;
     flex-direction: column;
     margin-bottom: 1rem;
 }
 
-.user_index-location-li p {
+.user-index-location-li p {
     text-align: center;
 }
 
-.user_index-location-li div {
+.user-index-location-li div {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
-.user_index-location h3 {
+.user-index-location h3 {
     margin-top: 2rem;
     margin-left: 2rem;
 }
 
-.user_index-submit {
+.user-index-submit {
     background-color: $color-cerise;
     color: white;
     padding: 12px 20px;
@@ -827,11 +822,11 @@ input[type=checkbox], input[type=range]{
     text-decoration: none;
 }
 
-/* END USER INDEX */
+// END USER INDEX
 
-/* START USER EDIT */
+// START USER EDIT
 
-.user_edit-h1 {
+.user-edit-h1 {
     text-align: center;
     background-color: $color-cerise;
     margin: initial;
@@ -839,7 +834,7 @@ input[type=checkbox], input[type=range]{
     color: $color-white;
 }
 
-.user_edit-div-form {
+.user-edit-div-form {
     margin: 1rem;
 }
 
@@ -848,49 +843,49 @@ input[type=checkbox], input[type=range]{
     text-align: center;
 }
 
-/* END USER EDIT */
+// END USER EDIT
 
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /*Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none; // Hidden by default
+    position: fixed; // Stay in place
+    z-index: 1; // Sit on top
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /*Black w/ opacity */
+    width: 100%; // Full width
+    height: 100%; // Full height
+    background-color: rgb(0,0,0); // Fallback color
+    background-color: rgba(0,0,0,0.4); // Black w/ opacity
   }
 
-/* Modal Content/Box */
+// Modal Content/Box
 .modal-content {
     background-color: $color-grey;
-    padding:1rem;
+    padding: 1rem;
     border: 1px solid #888;
     box-shadow: gray;
     margin: 1rem;
   }
 
-/* The closeSearch Button */
-.closeSearch {
+// The close-search Button
+.close-search {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
   }
 
-.closeSearch:hover,
-.closeSearch:focus {
+.close-search:hover,
+.close-search:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
   }
 
-.returnButton{
+.return-button{
     height: 100%;
     margin-left: 1rem;
     background-color: Transparent;
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
     border: none;
-    cursor:pointer;
+    cursor: pointer;
 }
