--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,10 +3,10 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <div class="user_edit-h1">
+    <div class="user-edit-h1">
         <h1>Créér un compte</h1>
     </div>
-    <div class="user_edit-div-form">
+    <div class="user-edit-div-form">
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.lastname) }}
         {{ form_row(registrationForm.firstname) }}
