--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,4 @@
-<div class="user_edit-div-form">
+<div class="user-edit-div-form">
     {{ form_start(form) }}
         {% if not form.vars.valid %}
             {{ form_errors(form) }}
