--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -35,8 +35,8 @@
             <a class="user_index-submit" href="{{ path('app_logout') }}">Deconnexion</a>
         </div>
         <div class="user_index-location">
-            {%if app.user.spaces is not empty %}
-                <h3>Mes locations :</h3>
+            {% if app.user.spaces %}
+                <h3 style="text-align: center; margin-right: 1.4rem;">Mes annonces :</h3>
             {% endif %}
             <ul class="user_index-location-ul">
             {% for space in app.user.spaces %}
