--- a/templates/space/_filters.html.twig
+++ b/templates/space/_filters.html.twig
@@ -51,13 +51,13 @@ var modal = document.getElementById("myModal");
 // Get the button that opens the modal
 var btn = document.getElementById("myModalBtn");
 // Get the button close-search element that closes the modal
-var close-search = document.getElementsByClassName("close-search")[0];
+var closesearch = document.getElementsByClassName("close-search")[0];
 // When the user clicks the button, open the modal
 btn.onclick = function () {
 modal.style.display = "block";
 }
 // When the user clicks on rechercher(x), close the modal
-close-search.onclick = function () {
+closesearch.onclick = function () {
 modal.style.display = "none";
 }
 // When the user clicks anywhere outside of the modal, close it
