--- a/assets/styles/autocomplete.scss
+++ b/assets/styles/autocomplete.scss
@@ -1,9 +1,8 @@
-/**
-* Minified by jsDelivr using clean-css v4.2.3.
-* Original file: /npm/@tarekraafat/autocomplete.js@10.2.6/dist/css/autoComplete.css
-*
-* Do NOT use SRI with dynamically generated files! More information: https://www.jsdelivr.com/using-sri-with-dynamic-files
-*/
+// Minified by jsDelivr using clean-css v4.2.3.
+// Original file: /npm/@tarekraafat/autocomplete.js@10.2.6/dist/css/autoComplete.css
+
+// Do NOT use SRI with dynamically generated files! More information: https://www.jsdelivr.com/using-sri-with-dynamic-files
+
 
 // Search Bar
 
