--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -1,6 +1,6 @@
-/* Font Work Sans weight:100 to 900 */
+// Font Work Sans weight:100 to 900
 @import 'https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap';
-/* Font Bodoni Moda weight:400 to 900 */
+// Font Bodoni Moda weight:400 to 900
 @import 'https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@400;500;600;700;800;900&family=Work+Sans:ital,wght@0,100;0,900;1,700;1,800&display=swap';
 
 $fontLogo: Bodoni Moda; 
